Web Sockets has a github repo

--- a/group-charter.html
+++ b/group-charter.html
@@ -234,7 +234,7 @@
           <dd>
             Specifications that allow network communications:
             <dl>
-              <dt id="web-sockets"><a title="Web Sockets API" href="http://dev.w3.org/html5/websockets/">Web
+              <dt id="web-sockets"><a title="Web Sockets API" href="https://github.com/w3c/websockets/">Web
                   Sockets API</a></dt>
               <dd>An API that enables Web pages to use the Web Sockets protocol for
                   two-way communication with a remote host.</dd>
