Shadow spec link updated

--- a/group-charter.html
+++ b/group-charter.html
@@ -280,7 +280,7 @@
 	      <dt><a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a></dt>
 	      <dd>Defines a way to include and reuse HTML documents in another
 		HTML documents.</dd>
-	      <dt><a href="http://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html">Shadow DOM</a></dt>
+	      <dt><a href="http://w3c.github.io/webcomponents/spec/shadow/">Shadow DOM</a></dt>
 	      <dd>Describes a method of establishing and maintaining functional
 		boundaries between DOM trees and how these trees interact with
 		each other within a document, thus enabling better functional
