Clarify patent policy mode

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -81,11 +81,15 @@
   <li><a href="http://www.w3.org/2009/dap/">Device APIs Working Group</a></li>
 </ul>
 
-<h2 id="process">Community and Business Group Process</h2>
+<h2 id="process">Community and Business Group Process and Patent Policy</h2>
 
-<p>Terms of in this charter that conflict with those of the <a href="https://www.w3.org/community/about/agreements/">Community and Business Group Process</a> are void.</p>
+<p>The group operates under the <a href="https://www.w3.org/community/about/agreements/">Community and Business Group Process</a> Terms of in this charter that conflict with those of the Community and Business Group Process are void.</p>
 
-<p>Note: this CG will not use a <em>contrib</em> mailing list for contributions since all contributions will be tracked via Github mechanisms (e.g. pull requests).</p>
+<p>
+As with other Community Groups, W3C seeks organizational licensing commitments under the <a href='http://www.w3.org/community/about/agreements/cla/'>W3C Community Contributor License Agreement (CLA)</a>. When people request to participate without representing their organization’s legal interests, W3C
+will in general approve those requests for this group with the following understanding: W3C will seek an organizational
+commitment under the CLA starting with the individual’s first request to make a contribution to a group deliverable. The section on
+<a href=“#contrib”>Contribution Mechanics</a> describes how W3C expects to monitor these contribution requests.
 
 <h2 id="contrib">Contribution Mechanics</h2>
 
@@ -94,6 +98,8 @@
 <p>The Community Group mailing list must not be used for discussing details of specific projects.</p>
 
 <p>Specifications created for proposals in the Community Group must use the <a href="http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document">W3C Software and Document License</a>.</p>
+
+<p>Note: this CG will not use a <em>contrib</em> mailing list for contributions since all contributions will be tracked via Github mechanisms (e.g. pull requests).</p>
 
 <h2 id="chairs">Chair Selection</h2>
 
