Added initial chairs and removed chair selection note

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -103,7 +103,7 @@ commitment under the CLA starting with the individual’s first request to make 
 
 <h2 id="chairs">Chair Selection</h2>
 
-<p><em>This section comes from the <a href="https://www.w3.org/community/council/wiki/Templates/CG_Charter">CG template</a>. It may not be the most appropriate text but is left as a starting point for discussion.</em></p>
+<p>The initial Chairs will be Marcos Caceres, Chris Wilson, and Yoav Weiss.</p>
 
 <p>Participants in this group choose their Chair(s) and can replace their Chair(s)at any time using whatever means they prefer. However, if 5 participants —no two from the same organisation— call for an election, the group must use the following process to replace any current Chair(s) with a new Chair, consulting the Community Development Lead on election operations (e.g., voting infrastructure and using RFC 2777).</p>
 
