--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -86,7 +86,7 @@
 <p>The group operates under the <a href="https://www.w3.org/community/about/agreements/">Community and Business Group Process</a> Terms of in this charter that conflict with those of the Community and Business Group Process are void.</p>
 
 <p>
-As with other Community Groups, W3C seeks organizational licensing commitments under the <a href='http://www.w3.org/community/about/agreements/cla/'>W3C Community Contributor License Agreement (CLA)</a>. When people request to participate without representing their organization’s legal interests, W3C
+As with other Community Groups, W3C seeks organizational licensing commitments under the <a href='http://www.w3.org/community/about/agreements/cla/'>W3C Community Contributor License Agreement (CLA)</a> (Proposals in this Community Group charter are applicable "Specification" in the CLA). When people request to participate without representing their organization’s legal interests, W3C
 will in general approve those requests for this group with the following understanding: W3C will seek an organizational
 commitment under the CLA starting with the individual’s first request to make a contribution to a group deliverable. The section on
 <a href=“#contrib”>Contribution Mechanics</a> describes how W3C expects to monitor these contribution requests.
