Push the launch for the CG for now. Added links to CONTRIBUTING and LICENSE. Tweaks contribution disagreement wording

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -23,7 +23,7 @@
 <h1><strong>&ndash;DRAFT&ndash;</strong> Web Platform Incubator Community Group Charter</h1>
 <dl>
  <dt>This Charter:</dt><dd><a href="http://w3c.github.io/charter-html/incubator-cg-charter.html">http://w3c.github.io/charter-html/incubator-cg-charter.html</a></dd>
- <dt>Start Date:</dt><dd>1 July 2015</dd>
+ <dt>Start Date:</dt><dd>6 July 2015</dd>
  <dt>Last Modified:</dt><dd>5 June 2015</dd>
  <dt>Status</dt><dd>This document is a work in progress based on the original proposal <a href="http://github.adrianba.net/webstandards/incubator-cg-charter">here</a>. Please raise <a href="https://github.com/w3c/charter-html/issues">issues</a> with feedback.</dd>
 </dl>
@@ -99,6 +99,8 @@ commitment under the CLA starting with the individual’s first request to make 
 
 <p>Specifications created for proposals in the Community Group must use the <a href="http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document">W3C Software and Document License</a>.</p>
 
+<p>All Github repositories attached to the Community Group must contain a copy of the <a href="https://github.com/w3c/licenses/blob/master/CG-contributing.md">CONTRIBUTING</a> and <a href="https://github.com/w3c/licenses/blob/master/CG-license.md">LICENSE</a> files.</p>
+
 <p>Note: this CG will not use a <em>contrib</em> mailing list for contributions since all contributions will be tracked via Github mechanisms (e.g. pull requests).</p>
 
 <h2 id="chairs">Chair Selection</h2>
@@ -121,8 +123,22 @@ commitment under the CLA starting with the individual’s first request to make 
 
 <p>It is the Chairs' responsibility to ensure that the decision process is fair, respects the consensus of the CG, and does not unreasonably favour or discriminate against any group participant or their employer. With that said, the group favours forward motion and dissent will not be allowed to block work on a spec.</p>
 
-<p>If substantial disagreement remains (e.g. the group is divided), the editors will continue with their preference. The issue should be recorded as decided without consensus. Individuals who disagree with the editor's choice are strongly encouraged to take
-ownership of their objection by taking ownership of an alternative fork. This is explicitly allowed (and preferred to blocking progress) with a goal of letting implementation experience inform which spec is ultimately chosen by the group to move ahead with.</p>
+<p>
+If substantial disagreement remains (e.g. the group is divided), the
+Committers will continue with their preference. The issue should be
+recorded as decided without consensus. Individuals who disagree with the
+Committer's choice are strongly encouraged to take ownership of their
+objection by taking ownership of an alternative fork. This is explicitly
+allowed (and preferred to blocking progress) with a goal of letting
+implementation experience inform which spec is ultimately chosen by the
+group to move ahead with.
+</p>
+
+<p>
+Initially, only the Editor's are the only Committers.  It is expected
+that participants can earn Committer status in a GitHub repo through a
+history of valuable contributions as is common in open source projects.
+</p>
 
 <h2 id="transparency">Transparency</h2>
 
