--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -34,7 +34,7 @@
 
 <p>As proposals gain support and become more stable and mature they will be considered for migration to a W3C Working Group where they can be put on the Recommendation track with appropriate status and Intellectual Property (IP) considerations.</p>
 
-<p>Individuals, after consultation with the Chairs, may prepare an "<a href="request-to-transition.html">intent to migrate</a>" assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalisation impacts. Those requests are evaluated within the Community Group as well the targeted W3C Working Group, if any.  The role of the CG and WG Chairs and W3C team is to facilitate the migration and ensure proper continuity in the community who proposed the idea.</p>
+<p>Individuals, after consultation with the Chairs, may prepare an "<a href="request-to-transition.html">intent to migrate</a>" assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalisation impacts. Those requests are evaluated within the Community Group as well as the targeted W3C Working Group, if any.  The role of the CG and WG Chairs and W3C team is to facilitate the migration and ensure proper continuity in the community who proposed the idea.</p>
 
 <h2 id="background">Background</h2>
 
@@ -68,7 +68,7 @@
 
 <p>New projects or status changes are communicated to the group through the public announcement mailing list (this list will not be used for discussing proposals).</p>
 
-<p>Proposal editors should publish regular status updates to the announcement mailing list (again encouraging discussion in the GitHub repo). This allows  group participants to monitor progress without having to directly watch every repo.</p>
+<p>Proposal editors should publish regular status updates to the announcement mailing list (again encouraging discussion in the GitHub repo). This allows group participants to monitor progress without having to directly watch every repo.</p>
 
 <h2 id="liaisons">Dependencies or Liaisons</h2>
 
