--- a/request-to-transition.html
+++ b/request-to-transition.html
@@ -49,7 +49,7 @@
 
 <p id='risk'><strong>Compatibility Risk</strong></p>
 
-<p>Please characterize how much we might regret standardizing this new feature were we might to change or remove it in the future. If you don&#8217;t have a github repository, include in this email links to relevant discussions, or documentation about support for the feature on the Web.</p>
+<p>Please characterize how much we might regret standardizing this new feature were we to change or remove it in the future. If you don&#8217;t have a github repository, include in this email links to relevant discussions, or documentation about support for the feature on the Web.</p>
 
 <p id='constraints'><strong>Ongoing technical constraints</strong></p>
 
