--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -117,6 +117,17 @@ commitment under the CLA starting with the individual’s first request to make 
 
 <p>Participants dissatisfied with the outcome of an election may ask the Community Development Lead to intervene. The Community Development Lead, after evaluating the election, may take any action including no action.</p>
 
+
+<h2 id="charter-change">Amendments to the Charter</h2>
+
+<p>
+This Charter can be amended by the Chairs with consultation of the
+Community Group, if the change is agreed to by W3C's Community
+Development Lead (Community Development Lead is described in the CG
+Process).
+</p>
+
+
 <h2 id="decision">Decision Process</h2>
 
 <p>This group will seek to make decisions when there is consensus. The editors of a spec will determine and record consensus decisions through the spec's GitHub repo issue list with assistance from the CG Chairs. Members of the group may reopen issues with new technical information.</p>
