Changed WPI CG to WICG

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -30,7 +30,7 @@
 
 <h2 id="goals">Goals</h2>
 
-<p>The Web Platform Incubator Community Group (WPI CG) provides a lightweight venue for proposing and discussing new web platform features. Each proposal will be discussed in its own repository within the group's Github account. Membership of the group is open to everybody but all participants will have signed the <a href="https://www.w3.org/community/about/agreements/cla/">W3C Community Contributor License Agreement</a>.</p>
+<p>The Web Platform Incubator Community Group (WICG) provides a lightweight venue for proposing and discussing new web platform features. Each proposal will be discussed in its own repository within the group's Github account. Membership of the group is open to everybody but all participants will have signed the <a href="https://www.w3.org/community/about/agreements/cla/">W3C Community Contributor License Agreement</a>.</p>
 
 <p>As proposals gain support and become more stable and mature they will be considered for migration to a W3C Working Group where they can be put on the Recommendation track with appropriate status and Intellectual Property (IP) considerations.</p>
 
@@ -40,11 +40,11 @@
 
 <p>W3C Community Groups provide a convenient structure within which to discuss early standards proposals with a concrete contribution license. While they are relatively simple to create, there is still enough friction in the system that causes some people to start work outside W3C with no formal IP considerations.</p>
 
-<p>The goal of the WPI CG is to balance these two considerations. It should be as low friction as possible to make new proposals where participants make their contributions with known IP commitments.</p>
+<p>The goal of the WICG is to balance these two considerations. It should be as low friction as possible to make new proposals where participants make their contributions with known IP commitments.</p>
 
-<p>Over time, the WPI CG will grow into a large community of people that have signed up for their contributions to be made according to the <a href="https://www.w3.org/community/about/agreements/cla/">W3C CG CLA</a>, much like an open source project grows a list of contributors making pull requests under the project license. The agreement only has to be accepted once and then contributions to any proposal in the CG are covered.</p>
+<p>Over time, the WICG will grow into a large community of people that have signed up for their contributions to be made according to the <a href="https://www.w3.org/community/about/agreements/cla/">W3C CG CLA</a>, much like an open source project grows a list of contributors making pull requests under the project license. The agreement only has to be accepted once and then contributions to any proposal in the CG are covered.</p>
 
-<p>Different organisations will have different internal policies for managing engagement in the WPI CG. Some will run internal processes before allowing their representatives to engage and make contributions to a particular proposal. Others allow contributions to any proposal according to standing policies. It is up to each organisation to determine how to manage this.</p>
+<p>Different organisations will have different internal policies for managing engagement in the WICG. Some will run internal processes before allowing their representatives to engage and make contributions to a particular proposal. Others allow contributions to any proposal according to standing policies. It is up to each organisation to determine how to manage this.</p>
 
 <p>This approach provides the following benefits:</p>
 
