--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -21,6 +21,12 @@
 <body>
 
 <h1><strong>&ndash;DRAFT&ndash;</strong> Web Platform Incubator Community Group Charter</h1>
+
+<p style='font-weight: bold; font-size: x-large; padding: 0.5ex; border: 1px solid black;'>
+This document was moved to <a href="https://wicg.github.io/admin/charter.html">https://wicg.github.io/admin/charter.html</a>
+</p>
+
+
 <dl>
  <dt>This Charter:</dt><dd><a href="http://w3c.github.io/charter-html/incubator-cg-charter.html">http://w3c.github.io/charter-html/incubator-cg-charter.html</a></dd>
  <dt>Start Date:</dt><dd>6 July 2015</dd>
