--- a/request-to-transition.html
+++ b/request-to-transition.html
@@ -29,6 +29,11 @@
 <body>
 <h1><strong>Intent to Migrate</strong>: &lt;feature name or short change description&gt;</h1>
 
+<p style='font-weight: bold; font-size: x-large; padding: 0.5ex; border: 1px solid black;'>
+This document was moved to <a href="https://wicg.github.io/admin/intent-to-migrate.html">https://wicg.github.io/admin/intent-to-migrate.html</a>
+</p>
+
+
 <h2>Body:</h2>
 
 <p id='contact'><strong>Supporter emails</strong></p>
@@ -82,7 +87,7 @@
 <p>(this form was largely inspired from Blink <a href='https://docs.google.com/a/chromium.org/document/d/1vlTlsQKThwaX0-lj_iZbVTzyqY7LioqERU8DK3u3XjI/edit#bookmark=id.uptkx07pm53s'>Intent to Implement and Ship templates</a>)</p>
 
 <p class='sign'>
-<a href="https://www.twitter.com/plhw3org">@plhw3org</a>, contribute: <a href="https://github.com/w3c/charter-html">w3c/charter-html</a>
+<a href="https://www.twitter.com/plhw3org">@plhw3org</a>, contribute: <a href="https://github.com/wicg/admin/">wicg/admin</a>
 </p>
 </body>
 </html>
