Use software license shortlink

--- a/group-charter.html
+++ b/group-charter.html
@@ -621,7 +621,7 @@ during their development.
       </div>
       <div class="licensing">
         <h2 id="licensing">Licensing</h2>
-        <p>This Working Group will use the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document.html'>W3C Software and Document license</a> for all its deliverables.</p>
+        <p>This Working Group will use the <a href='http://www.w3.org/Consortium/Legal/copyright-software'>W3C Software and Document license</a> for all its deliverables.</p>
       </div>
       <div class="patent">
         <h2 id="about">About this Charter</h2>
