Offer to adopt Web Timing CG specs

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -101,6 +101,9 @@
         <dd>The Timed Media Working Group may work on low-level media APIs to support the work of the Audio and Web Real-Time Communications Working Groups.</dd>
         <dt>Secondary Screen Support</dt>
         <dd>The Timed Media Working Group may coordinate work on secondary screen playback with the Second Screen Presentation Working Group.</dd>
+        <dt>Synchronization</dt>
+        <dd>If the <a href="https://www.w3.org/community/webtiming/">Multi-Device Timing Community Group</a> produces a mature specification with implementation support, then the Timed Media Working Group may adopt this work onto the Recommendation Track.</dd>
+
       </dl>
 
       <p>The Working Group may use the <a href="#">Web Platform Community Group</a> or other Community Groups to explore possible new work within its scope that is not covered in the deliverables above. If the Working Group decides to add new features or specifications to its deliverables, it will recharter with changes to that new charter limited to just changes in deliverables.</p>
