Fixed FTE and minor edits

--- a/group-charter.html
+++ b/group-charter.html
@@ -84,8 +84,8 @@
           </tr>
           <tr>
             <th>Team Contacts <br />
-              (FTE %: 75)</th>
-            <td>Yves Lafon, Xiaoqian Wu, Robin Berjon</td>
+              (FTE %: 1.55)</th>
+            <td>Yves Lafon, Xiaoqian Wu, TBD</td>
           </tr>
           <tr>
             <th>Usual Meeting Schedule</th>
@@ -119,7 +119,7 @@
     <p>The Working Group’s work will be considered a success if its deliverables that are widely used. In particular:
     <ul>
       <li>Production of stable documents addressing the work items
-      listed in the <a href="#deliverables">Deliverables</a> section.
+      listed in the <a href="#milestones">Milestones</a> section.
       <li>Test suites for each deliverable with conformance criteria.
       <li>Availability of authoring tools and validation tools.
       <li>User-community and industry adoption of the group deliverables.
@@ -137,7 +137,7 @@
       <div class="deliverables">
         <h2 id="deliverables">Deliverables</h2>
         <h3 id="rec-track">Recommendation-Track Deliverables</h3>
-        <p>The working group will deliver the following W3C Recommendations:</p>
+        <p>The working group will work on the following W3C specifications:</p>
         <dl>
           <dt id="clipops"><a href="https://w3c.github.io/clipboard-apis/">Clipboard
               API and events</a></dt>
@@ -302,7 +302,7 @@
         <p>Each specification should contain a section detailing any known
           security implications for implementers, Web authors, and end users.
           The Web Platform WG will actively seek security, privacy,
-          internationalisation and accessibility review on all its
+          internationalization and accessibility review on all its
           specifications.</p>
         <p>After a specification reaches Recommendation status the working group
           may begin work on, and deliver an updated version of the specification
@@ -635,8 +635,8 @@ during their development.
 
       <hr />
       <address> Yves Lafon, Team Contact <br />
-	Xiaoqian Wu, Team Contact <br />
-  Robin Berjon, Team Contact <br />
+        Xiaoqian Wu, Team Contact <br />
+        TBD, Team Contact <br />
         Adrian Bateman, Chair <br />
         Art Barstow, Chair <br />
         Charles McCathie Nevile, Chair <br />
@@ -645,7 +645,7 @@ during their development.
           rel="Copyright">Copyright</a>©
         2015 <a href="http://www.w3.org/"><abbr title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup>
         (<a href="http://www.csail.mit.edu/"><abbr title="Massachusetts Institute of Technology">MIT</abbr></a>,
-        <a href="http://www.ercim.org/"><abbr title="European Research Consortium for Informatics and Mathematics">ERCIM</abbr></a>,
+        <a href="http://www.ercim.eu/"><abbr title="European Research Consortium for Informatics and Mathematics">ERCIM</abbr></a>,
         <a href="http://www.keio.ac.jp/">Keio</a>,
 	<a href="http://ev.buaa.edu.cn/">Beihang</a>), All Rights Reserved.</p>
     </div>
