Added background section to make the intent clearer

--- a/group-charter.html
+++ b/group-charter.html
@@ -38,6 +38,7 @@
       <ul id="navbar">
         <li><a href="#goals">Goals</a></li>
         <li><a href="#scope">Scope</a></li>
+        <li><a href="#background">Background</a></li>
         <li><a href="#deliverables">Deliverables</a></li>
         <li><a href="#coordination">Dependencies and Liaisons</a></li>
         <li><a href="#participation">Participation</a></li>
@@ -100,6 +101,14 @@
           </tr>
         </tbody>
       </table>
+      <div id="background">
+        <h2>Background</h2>
+        <p>
+          This Working Group is the result of merging the Web Applications Working Group and the HTML Working Group, modulo the HTML Media Task Force.
+          The work boundaries between the two Working Groups have narrowed over the years, given that it is difficult nowadays to introduce new HTML elements and attributes without looking at their implications at the API level. While there is desire to reorganize the work in terms of functionalities rather then technical solution, resulting in several Working Groups, this Working Group is an interim group while discussion is ongoing regarding the proper modularization of HTML and its APIs, and it enables the ongoing specifications to continue to move forward over the next 12 months.
+        </p>
+
+      </div>
       <div id="scope">
         <h2>Scope</h2>
         <p>The Web Platform Working Group will:</p>
