Update HTML ref, Removed Polyglot, Added Indie/WAPA

--- a/group-charter.html
+++ b/group-charter.html
@@ -186,6 +186,10 @@
                 </dd>
               <dt><a href="https://w3c.github.io/editing/input-events.html">Input Events</a></dt>
               <dd>A specification defining events for text and related input and provides relavant contextual information for each event.</dd>
+              <dt>High level User Events</dt>
+              <dd>
+                A specification to enable authors to support user interaction in web applications easily without requiring specific hardware, platform, or input methodologies to be in use.
+              </dd>
             </dl>
           </dd>
           <dt id="file-apis">File interaction APIs</dt>
@@ -207,12 +211,8 @@
           <dd>
             Specifications to define the HTML language, HTML-specific APIs for interacting with in-memory representations of resources that use the HTML language, and defines normative requirements for browsers and other user agents which process HTML resources.
             <dl>
-              <dt><a href="http://www.w3.org/TR/html/">HTML</a></dt>
-              <dd>A specification defining the core language of the World Wide Web: the Hypertext Markup Language (HTML). The updated HTML specification may be modularized into separate documents. When extensions to the HTML specification are needed, separate <a href='http://www.w3.org/TR/html5/infrastructure.html#extensibility'>extension specifications</a> can be written. </dd>
-              <dt><a href="http://dev.w3.org/html5/html-xhtml-author-guide/">Polyglot Markup: HTML-Compatible XHTML Documents</a></dt>
-              <dd>
-                 A specification defining a stream of bytes that parses into identical document trees when processed either as HTML or when processed as XML.
-              </dd>
+              <dt><a href="http://www.w3.org/TR/html51/">HTML</a></dt>
+              <dd>A specification defining the core language of the World Wide Web: the Hypertext Markup Language (HTML). The updated HTML specification may be modularized into separate documents. When extensions to the HTML specification are needed, separate <a href='http://www.w3.org/TR/html5/infrastructure.html#extensibility'>extension specifications</a> can be written.</dd>
               <dt><a href="http://www.w3.org/TR/2dcontext/">HTML Canvas 2D Context</a></dt>
               <dd>An API for the 2D Context of the HTML canvas element.</dd>
               <dt><a href="http://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility API Mappings 1.0</a></dt>
