Clarified responsibilities for providing updates

--- a/group-charter.html
+++ b/group-charter.html
@@ -574,7 +574,7 @@ during their development.
         for contributions and communications. Discourse may be used for broad discussions with the community.
         There will be one github repository per document. Similar to open-source software development,
         peer production is encouraged: changes will be executed through Pull Requests, with pull requests reviewed before being merged.
-        Regular activity summaries around the github repositories MUST be provided.</p>
+        The Chairs must ensure that regular activity summaries around the github repositories activity are provided.</p>
         <p>The Group may use mailing lists. Subscription
           to these lists is open to the public, subject to W3C norms of
           behavior. </p>
