--- a/group-charter.html
+++ b/group-charter.html
@@ -369,6 +369,9 @@
             Recommendation track, and the maintenance of a implementation report
             is encouraged. </p>
         </div>
+        <h3>Adding new Recommendation-track deliverables</h3>
+
+        <p>If additional deliverables need to be added to the Charter before the Charter expires, the Working Group will prepare an updated Charter that differs only in deliverables. In the interest of agile spec development, the group requests that the Advisory Committee and Director restrict approval reviews for those Charter deliverables adjustments to just the changes in the Charter, rather than considering the entire Charter again for review.</p>
         <h3 id="milestones">Milestones</h3>
         <p>The group's <a href="https://w3c.github.com/webplatform-wg/PubStatus.md">Specification Status</a>
 	  document provides current data about all of the group's specifications,
