--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -108,6 +108,10 @@
 
       </dl>
 
+        <h3>Adding new Recommendation-track deliverables</h3>
+
+        <p>If additional deliverables need to be added to the Charter before the Charter expires, the Working Group will prepare an updated Charter that differs only in deliverables. In the interest of agile spec development, the group requests that the Advisory Committee and Director restrict approval reviews for those Charter deliverables adjustments to just the changes in the Charter, rather than considering the entire Charter again for review.</p>
+
       <p>The Working Group may use the <a href="#">Web Platform Community Group</a> or other Community Groups to explore possible new work within its scope that is not covered in the deliverables above. If the Working Group decides to add new features or specifications to its deliverables, it will recharter with changes to that new charter limited to just changes in deliverables.</p>
 
 	    <h3 id="milestones">Milestones</h3>
