Some link corrections

--- a/group-charter.html
+++ b/group-charter.html
@@ -36,7 +36,6 @@
   <body>
     <div id="template">
       <ul id="navbar">
-        <li><a href="#goals">Goals</a></li>
         <li><a href="#scope">Scope</a></li>
         <li><a href="#deliverables">Deliverables</a></li>
         <li><a href="#coordination">Dependencies and Liaisons</a></li>
@@ -196,7 +195,7 @@
               <dd>An API that enables web applications to select file objects
                 and access their data. This replaces the File Upload
                 specification.</dd>
-              <dt id="file-system-2"><a href="http://w3c.github.io/filesystem-api/Overview.html">FileSystem
+              <dt id="file-system-2"><a href="http://w3c.github.io/filesystem-api/">FileSystem
                   API</a></dt>
               <dd>A local sandboxed file system API exposed only to Web Applications.</dd>
             </dl>
@@ -370,7 +369,7 @@
             is encouraged. </p>
         </div>
         <h3 id="milestones">Milestones</h3>
-        <p>The group's <a href="https://w3c.github.com/webplatform-wg/PubStatus.md">Specification Status</a>
+        <p>The group's <a href="https://w3c.github.com/webplatform-wg/@@">Specification Status</a>
 	  document provides current data about all of the group's specifications,
 	  including Technical Report publication plans and testing status.
 	  Although the group expects all of its specifications to progress during this
@@ -563,7 +562,7 @@ during their development.
       </div>
       <div class="communication">
         <h2 id="communication">Communication</h2>
-        <p>The <a href="https://w3c.github.com/webplatform-wg/WorkMode.md">working
+        <p>The <a href="https://w3c.github.com/webplatform-wg/@@">working
             mode</a> of the group is described in detail on its wiki. In general
           the group does not hold plenary teleconferences, but does meet face to face at the
           TP/AC. It may hold more meetings, and certain specifications are
