Fixed WICG link

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -108,7 +108,7 @@
 
       </dl>
 
-      <p>The Working Group may use the <a href="#">Web Platform Community Group</a> or other Community Groups to explore possible new work within its scope that is not covered in the deliverables above. If the Working Group decides to add new features or specifications to its deliverables, it will recharter with changes to that new charter limited to just changes in deliverables.</p>
+      <p>The Working Group may use the <a href="https://www.w3.org/community/wicg/">Web Platform Community Group</a> or other Community Groups to explore possible new work within its scope that is not covered in the deliverables above. If the Working Group decides to add new features or specifications to its deliverables, it will recharter with changes to that new charter limited to just changes in deliverables.</p>
 
 	    <h3 id="milestones">Milestones</h3>
 	    <table class="roadmap" width="80%"><caption>
