Fixed Web Platform liaison

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -148,8 +148,8 @@
  	<h3>W3C Groups</h3>
 
  	  <dl>
-      <dt><a href="http://w3c.github.io/charter-html/group-charter.html">Web Applications Working Group</a></dt>
-      <dd>This group maintains the HTML specifications that provides the foundation for specifications authored in the Timed Media WG.</dd>
+      <dt><a href="http://w3c.github.io/charter-html/group-charter.html">Web Platform Working Group</a></dt>
+      <dd>This group continues the development of the HTML language, provides specifications that enable improved client-side application development on the Web, including application programming interfaces (APIs) for client-side development and markup vocabularies for describing and controlling client-side application behavior.</dd>
       <dt><a href="http://www.w3.org/2011/audio/">Audio Working Group</a></dt>
       <dd>This group creates specifications for media online captioning including Timed Text Markup Language (TTML) and WebVTT (Web Video Text Tracks).</dd>
       <dt><a href="http://www.w3.org/AudioVideo/TT/">Timed Text Working Group</a></dt>
