Updated team contacts

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -41,7 +41,7 @@
       <tr><th rowspan="1" colspan="1">Confidentiality</th><td rowspan="1" colspan="1">Proceedings are <a href="http://www.w3.org/2014/Process-20140801/#confidentiality-levels" shape="rect">public</a></td></tr>
       <tr><th rowspan="1" colspan="1">Initial Chairs</th><td rowspan="1" colspan="1"><span class="toadd">CHAIR INFO</span></td></tr>
       <tr><th rowspan="1" colspan="1">Initial Team Contacts<br/>
-        (FTE %: 10)</th><td rowspan="1" colspan="1"><span class="toadd">TEAM CONTACT INFO</span></td></tr>
+        (FTE %: 70)</th><td rowspan="1" colspan="1">Yosuke Funahashi, <span class="toadd">TBD</span></td></tr>
         <tr><th rowspan="1" colspan="1">Usual Meeting Schedule</th><td rowspan="1" colspan="1">
           <strong>Teleconferences:</strong> weekly coordination calls will be held, with additional calls as needed.<br>
           <strong>Face-to-face:</strong> we will meet during the W3C's annual Technical Plenary week; additional face-to-face meetings may be scheduled by consent of the participants.
