guidelines group may change

--- a/group-charter.html
+++ b/group-charter.html
@@ -486,7 +486,7 @@ during their development.
             requirements, particularly with regard to interoperability with
             assistive technologies, and inclusion in deliverables of guidance
             for implementing Web Platform deliverables in ways that support
-            accessibility requirements.</dd>
+            accessibility requirements. (This Group is expected to combine into an all-guidelines group in 2016 2Q).</dd>
           <dt><a href="http://www.w3.org/Mobile/IG/">Web and Mobile Interest Group</a></dt>
           <dd>This group may provide advice or review to ensure that Web Platform WG
             deliverables interact correctly in the context of Mobile applications.</dd>
