Emphasized expectation on the HTML breakup

--- a/group-charter.html
+++ b/group-charter.html
@@ -220,7 +220,7 @@
             Specifications to define the HTML language, HTML-specific APIs for interacting with in-memory representations of resources that use the HTML language, and defines normative requirements for browsers and other user agents which process HTML resources.
             <dl>
        </dt>
-              <dd>A specification defining the core language of the World Wide Web: the Hypertext Markup Language (HTML). The updated HTML specification may be modularized into separate documents. When extensions to the HTML specification are needed, separate <a href='http://www.w3.org/TR/html5/introduction.html#extensibility'>extension specifications</a> can be written.</dd>
+              <dd>A specification defining the core language of the World Wide Web: the Hypertext Markup Language (HTML). The updated HTML specification are expected to be <a href='http://darobin.github.io/breakup/specs/'>modularized into separate documents</a>. When extensions to the HTML specification are needed, separate <a href='http://www.w3.org/TR/html5/introduction.html#extensibility'>extension specifications</a> can be written.</dd>
               <dt><a href="http://www.w3.org/TR/2dcontext/">HTML Canvas 2D Context</a></dt>
               <dd>An API for the 2D Context of the HTML canvas element.</dd>
               <dt><a href="http://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility API Mappings 1.0</a></dt>
