Excluded HTMLMediaInterface from Web Platform group to avoid overlap

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -83,7 +83,7 @@
           <dd>This specification extends HTMLMediaElement providing APIs to control playback of protected content. The API supports use cases ranging from simple clear key decryption to high value video (given an appropriate user agent implementation). License/key exchange is controlled by the application, facilitating the development of robust playback applications supporting a range of content decryption and protection technologies.</dd>
         </dl>
 
-      <h3 id="rec-track">Specification Maintenance</h3>
+      <h3 id="maintenance">Specification Maintenance</h3>
       <p>The Timed Media Working Group will maintain errata and new editions, as necessary, for the <a href="http://www.w3.org/TR/2014/REC-html5-20141028/embedded-content-0.html#htmlmediaelement">HTMLMediaElement</a> related sections of <a href="http://www.w3.org/TR/2014/REC-html5-20141028/">HTML 5.0</a> (e.g. sections 4.7.6 to 4.7.10). When future versions of HTML are published as modules, the working
       group will deliver future versions of these timed media features as a W3C Recommendation.</p>
 
