Added link to transcript proposal with milestone

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -92,7 +92,7 @@
 
       <dl>
         <dt>Transcript</dt>
-        <dd>If the current Transcript proposal gains implementation support and momentum.</dd>
+        <dd>If the current <a href="http://chaals.github.io/html-transcript/html-transcript-src.html">Transcript proposal</a> gains implementation support and momentum.</dd>
         <dt>Captioning support</dt>
         <dd>The group may produce a specification to enhance the timed text and caption support available to HTML5 media elements. At a future date, should the Timed Text Working Group choose to halt work on the WebVTT specification, the Timed Media Working Group may take up this work.</dd>
         <dt>Inband Track Support</dt>
@@ -140,6 +140,9 @@
           </tr>
         </tbody>
         </table>
+        <p>
+          The <a href="http://chaals.github.io/html-transcript/html-transcript-src.html">transcript proposal</a> is expected to reach FPWD in October 2015.
+        </p>
 
     </div>
 
